# travel-hub

./: .gitignore  compose.yaml  heroku.yml  pom.xml
.github/workflows/: maven.yml
ai/: .env.example  Dockerfile  embed_travel_places.py  pyproject.toml  run.sh
ai/scripts/: embed_travel_places.py  sliding_window.sql
ai/src/: main.py
ai/src/entity/: content_embedding.py  embedding.py  itinerary.py  preference.py  recommendation.py  setting.py  travel_assistant.py
ai/src/grpc/: embedding_pb2.py  embedding_pb2_grpc.py
ai/src/proto/: embedding.proto
ai/src/repo/: post_embeddings.py  rate_limit_log.py  recommendations.py  travel_place_embeddings.py  user_preferences.py
ai/src/services/: content_embedding_processor.py  embedding.py  embedding_grpc.py  embedding_text_composer.py  itinerary.py  place_recommendation_service.py  preference_profile_processor.py  preferences.py  travel_assistant.py
ai/src/utils/: constants.py
ai/tests/: test_travel_assistant.py
crawler/: ingest.py  main.py  pyproject.toml  travel_data.json
crawler/results/: an-giang.json  bac-ninh.json  ca-mau.json  can-tho.json  cao-bang.json  da-nang.json  dak-lak.json  dien-bien.json  dong-nai.json  dong-thap.json  gia-lai.json  ha-noi.json  ha-tinh.json  hai-phong.json  hung-yen.json  khanh-hoa.json  lai-chau.json  lam-dong.json  lang-son.json  lao-cai.json  nghe-an.json  ninh-binh.json  phu-tho.json  quang-ngai.json  quang-ninh.json  quang-tri.json  son-la.json  tay-ninh.json  thai-nguyen.json  thanh-hoa.json  thua-thien-hue.json  (+3 more)
main/: API_DOCUMENTATION.md  Dockerfile  pom.xml
(+393 files in other folders)
