[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.2",
    "langchain>=1.2.13",
    "langchain-google-genai>=4.2.1",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
    "tqdm>=4.67.1",
    "torch>=2.11.0",
    "transformers>=5.4.0",
]
